<resources>
    <string name="app_name">Notes App</string>
    <string name="txt_todo">ini todo</string>
    <string name="txt_no_data">No data</string>
    <string name="txt_title">Title</string>
    <string name="txt_dsc">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="low_priority">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string-array name = "priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>